--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Nunito Sans', sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -12,4 +13,16 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+h1 {
+  font-weight: 800;
+}
+
+h2 {
+  font-weight: 600;
+}
+
+h3, h4, h5, h6, p {
+  font-weight: 300;
 }
