--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
@@ -26,3 +32,4 @@ h2 {
 h3, h4, h5, h6, p {
   font-weight: 300;
 }
+
